chore: Clean up operation params APIs [DHIS2-17790]